tests/exposure_test_with_anp_8/policies.yaml
apiVersion: policy.networking.k8s.io/v1alpha1
kind: AdminNetworkPolicy
metadata:
  name: exposure-deny-peer-allow-entire-cluster-all-conns
spec:
  priority: 10
  subject:
    pods:
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: hello-world
      podSelector:
        matchLabels:
          app: a-app
  egress:
  - name: "deny-TCP9090-egress-to-slytherin" 
    action: "Deny" 
    to:
    - namespaces:
        matchLabels:
            conformance-house: slytherin
    ports:
    - portNumber:
        port: 9090
        protocol: TCP    
  - name: "allow-all-to-entire-cluster"
    action: "Allow"
    to:
    - namespaces: {}
